--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/asyncapi-jsonschema:$SHORT_SHA', '.' ]
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/asyncapi-jsonschema:$SHORT_SHA']
+    args: ['push', 'eu.gcr.io/$PROJECT_ID/asyncapi-jsonschema:$SHORT_SHA']
   - name: 'gcr.io/cloud-builders/kubectl'
     args: ['-n', 'asyncapi-jsonschema', 'set', 'image', 'deployment/website-app', 'app=eu.gcr.io/$PROJECT_ID/asyncapi-jsonschema:$SHORT_SHA']
     env:
